--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "17.0.1",
     "react-audio-player": "^0.14.0",
     "react-dom": "17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "typewriter-effect": "^2.17.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.25",
