--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.5",
-    "@chakra-ui/react": "^1.2.1",
-    "@chakra-ui/theme-tools": "^1.0.4",
+    "@chakra-ui/icons": "^2.0.17",
+    "@chakra-ui/react": "^2.4.9",
+    "@chakra-ui/theme-tools": "^2.0.16",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "framer-motion": "^3.3.0",
-    "next": "10.0.6",
-    "react": "17.0.1",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
     "react-audio-player": "^0.14.0",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "typewriter-effect": "^2.17.0"
   },
   "devDependencies": {
