--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
@@ -14,7 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^9.0.2",
-    "next": "^13.5.5",
+    "next": "^14.0.3",
     "react": "^18.2.0",
     "react-audio-player": "^0.14.0",
     "react-dom": "^18.2.0",
