--- a/package.json
+++ b/package.json
@@ -1,29 +1,34 @@
 {
-  "name": "personal-blog",
+  "name": "example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.1",
-    "@chakra-ui/theme-tools": "^2.1.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "framer-motion": "^9.0.2",
-    "next": "^14.0.3",
-    "react": "^18.2.0",
-    "react-audio-player": "^0.14.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "typewriter-effect": "^2.17.0"
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^3.19.1",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "framer-motion": "^12.12.1",
+    "motion": "^12.10.4",
+    "next": "15.3.2",
+    "next-themes": "^0.4.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "typescript": "^5.2.2"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "typescript": "^5"
   }
 }
