--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "personal-blog",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,26 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^3.19.1",
-    "@emailjs/browser": "^4.4.1",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "framer-motion": "^12.12.1",
-    "motion": "^12.10.4",
-    "next": "15.3.2",
-    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "next": "15.3.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
